// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test example1.md 1`] = `
<div>
  <div>
    <div
      class="leke-alert-container leke-alert-container-info"
    >
      <div
        class="leke-alert-context"
      >
        <div
          class="leke-alert-message"
        >
          这是一条普通消息
        </div>
      </div>
    </div>
    <div
      class="leke-alert-container leke-alert-container-success"
    >
      <div
        class="leke-alert-context"
      >
        <div
          class="leke-alert-message"
        >
          恭喜！你所提交的信息已经审核通过，如有问题请联系客服。
        </div>
      </div>
    </div>
    <div
      class="leke-alert-container leke-alert-container-error"
    >
      <div
        class="leke-alert-context"
      >
        <div
          class="leke-alert-message"
        >
          这是一条失败消息
        </div>
      </div>
    </div>
    <div
      class="leke-alert-container leke-alert-container-warning"
    >
      <div
        class="leke-alert-context"
      >
        <div
          class="leke-alert-message"
        >
          这是一条警告消息
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test example2.md 1`] = `
<div>
  <div>
    <div
      class="leke-alert-container leke-alert-container-info"
    >
      <div
        class="leke-alert-icon-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm32 664c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V456c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272zm-32-344a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
            />
          </svg>
        </i>
      </div>
      <div
        class="leke-alert-context"
      >
        <div
          class="leke-alert-message"
        >
          这是一条普通消息
        </div>
      </div>
      <div
        class="leke-alert-close-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
            />
          </svg>
        </i>
      </div>
    </div>
    <div
      class="leke-alert-container leke-alert-container-success"
    >
      <div
        class="leke-alert-icon-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm193.5 301.7l-210.6 292a31.8 31.8 0 01-51.7 0L318.5 484.9c-3.8-5.3 0-12.7 6.5-12.7h46.9c10.2 0 19.9 4.9 25.9 13.3l71.2 98.8 157.2-218c6-8.3 15.6-13.3 25.9-13.3H699c6.5 0 10.3 7.4 6.5 12.7z"
            />
          </svg>
        </i>
      </div>
      <div
        class="leke-alert-context"
      >
        <div
          class="leke-alert-message"
        >
          恭喜！你所提交的信息已经审核通过，如有问题请联系客服。
        </div>
      </div>
      <div
        class="leke-alert-close-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
            />
          </svg>
        </i>
      </div>
    </div>
    <div
      class="leke-alert-container leke-alert-container-error"
    >
      <div
        class="leke-alert-icon-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
            />
          </svg>
        </i>
      </div>
      <div
        class="leke-alert-context"
      >
        <div
          class="leke-alert-message"
        >
          这是一条失败消息
        </div>
      </div>
      <div
        class="leke-alert-close-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
            />
          </svg>
        </i>
      </div>
    </div>
    <div
      class="leke-alert-container leke-alert-container-warning"
    >
      <div
        class="leke-alert-icon-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
            />
          </svg>
        </i>
      </div>
      <div
        class="leke-alert-context"
      >
        <div
          class="leke-alert-message"
        >
          这是一条警告消息
        </div>
      </div>
      <div
        class="leke-alert-close-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
            />
          </svg>
        </i>
      </div>
    </div>
  </div>
</div>
`;

exports[`test example3.md 1`] = `
<div>
  <div>
    <div
      class="leke-alert-container leke-alert-container-info"
    >
      <div
        class="leke-alert-icon-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm32 664c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V456c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272zm-32-344a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
            />
          </svg>
        </i>
      </div>
      <div
        class="leke-alert-context"
      >
        <div
          class="leke-alert-message"
        >
          这是一条普通消息
        </div>
      </div>
      <div
        class="leke-alert-action-box"
      >
        <button
          class="leke-remove-padding leke-btn leke-btn-link leke-btn-small"
        >
          <span
            class="leke-btn-content"
          >
            撤销
          </span>
        </button>
      </div>
      <div
        class="leke-alert-close-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
            />
          </svg>
        </i>
      </div>
    </div>
    <div
      class="leke-alert-container leke-alert-container-success"
    >
      <div
        class="leke-alert-icon-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm193.5 301.7l-210.6 292a31.8 31.8 0 01-51.7 0L318.5 484.9c-3.8-5.3 0-12.7 6.5-12.7h46.9c10.2 0 19.9 4.9 25.9 13.3l71.2 98.8 157.2-218c6-8.3 15.6-13.3 25.9-13.3H699c6.5 0 10.3 7.4 6.5 12.7z"
            />
          </svg>
        </i>
      </div>
      <div
        class="leke-alert-context"
      >
        <div
          class="leke-alert-message"
        >
          恭喜！你所提交的信息已经审核通过，如有问题请联系客服。
        </div>
      </div>
      <div
        class="leke-alert-action-box"
      >
        <button
          class="leke-remove-padding leke-btn leke-btn-link leke-btn-small"
        >
          <span
            class="leke-btn-content"
          >
            查看详情
          </span>
        </button>
      </div>
      <div
        class="leke-alert-close-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
            />
          </svg>
        </i>
      </div>
    </div>
    <div
      class="leke-alert-container leke-alert-container-error"
    >
      <div
        class="leke-alert-icon-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
            />
          </svg>
        </i>
      </div>
      <div
        class="leke-alert-context"
      >
        <div
          class="leke-alert-message"
        >
          这是一条普通消息
        </div>
      </div>
      <div
        class="leke-alert-action-box"
      >
        <button
          class="leke-remove-padding leke-btn leke-btn-link leke-btn-small"
        >
          <span
            class="leke-btn-content"
          >
            前往设置
          </span>
        </button>
      </div>
      <div
        class="leke-alert-close-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
            />
          </svg>
        </i>
      </div>
    </div>
    <div
      class="leke-alert-container leke-alert-container-warning"
    >
      <div
        class="leke-alert-icon-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
            />
          </svg>
        </i>
      </div>
      <div
        class="leke-alert-context"
      >
        <div
          class="leke-alert-message"
        >
          这是一条警告消息
        </div>
      </div>
      <div
        class="leke-alert-close-box"
      >
        <button
          class="leke-remove-padding leke-btn leke-btn-link leke-btn-small"
        >
          <span
            class="leke-btn-content"
          >
            我知道了
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`test example4.md 1`] = `
<div>
  <div
    class="context"
  >
    <div
      class="left"
    >
      <div
        class="leke-alert-container leke-alert-container-info leke-alert-has-title-container"
      >
        <div
          class="leke-alert-context"
        >
          <div
            class="leke-alert-title"
          >
            普通消息标题
          </div>
          <div
            class="leke-alert-message"
          >
            你好！欢迎使用金融云2.0专业版，你可以根据自身需求添加业务模块。你好！欢迎使用金融云2.0专业版，你可以根据自身需求添加业务模块。
          </div>
        </div>
        <div
          class="leke-alert-close-box leke-alert-has-title-close-box"
        >
          <i
            class="leke-icon"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
            >
              <path
                d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
              />
            </svg>
          </i>
        </div>
      </div>
      <div
        class="leke-alert-container leke-alert-container-success leke-alert-has-title-container"
      >
        <div
          class="leke-alert-context"
        >
          <div
            class="leke-alert-title"
          >
            成功消息标题
          </div>
          <div
            class="leke-alert-message"
          >
            你好！欢迎使用金融云2.0专业版，你可以根据自身需求添加业务模块。你好！欢迎使用金融云2.0专业版，你可以根据自身需求添加业务模块。
          </div>
        </div>
        <div
          class="leke-alert-close-box leke-alert-has-title-close-box"
        >
          <i
            class="leke-icon"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
            >
              <path
                d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
              />
            </svg>
          </i>
        </div>
      </div>
      <div
        class="leke-alert-container leke-alert-container-error leke-alert-has-title-container"
      >
        <div
          class="leke-alert-context"
        >
          <div
            class="leke-alert-title"
          >
            失败消息标题
          </div>
          <div
            class="leke-alert-message"
          >
            你好！欢迎使用金融云2.0专业版，你可以根据自身需求添加业务模块。你好！欢迎使用金融云2.0专业版，你可以根据自身需求添加业务模块。
          </div>
        </div>
        <div
          class="leke-alert-close-box leke-alert-has-title-close-box"
        >
          <i
            class="leke-icon"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
            >
              <path
                d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
              />
            </svg>
          </i>
        </div>
      </div>
      <div
        class="leke-alert-container leke-alert-container-warning leke-alert-has-title-container"
      >
        <div
          class="leke-alert-context"
        >
          <div
            class="leke-alert-title"
          >
            警告消息标题
          </div>
          <div
            class="leke-alert-message"
          >
            你好！欢迎使用金融云2.0专业版，你可以根据自身需求添加业务模块。你好！欢迎使用金融云2.0专业版，你可以根据自身需求添加业务模块。
          </div>
        </div>
        <div
          class="leke-alert-close-box leke-alert-has-title-close-box"
        >
          <i
            class="leke-icon"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
            >
              <path
                d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
              />
            </svg>
          </i>
        </div>
      </div>
    </div>
    <div
      class="right"
    >
      <div
        class="leke-alert-container leke-alert-container-info leke-alert-has-title-container"
      >
        <div
          class="leke-alert-icon-box leke-alert-has-title-icon-box"
        >
          <i
            class="leke-icon"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
            >
              <path
                d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm32 664c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V456c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272zm-32-344a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
              />
            </svg>
          </i>
        </div>
        <div
          class="leke-alert-context"
        >
          <div
            class="leke-alert-title"
          >
            普通消息标题
          </div>
          <div
            class="leke-alert-message"
          >
            <div>
              你好！欢迎使用金融云2.0专业版，你可以根据自身需求添加业务模块。你好！欢迎使用金融云2.0专业版，你可以根据自身需求添加业务模块。
              <button
                class="leke-btn leke-btn-link leke-btn-small"
              >
                <span
                  class="leke-btn-content"
                >
                  查看详情
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          class="leke-alert-close-box leke-alert-has-title-close-box"
        >
          <i
            class="leke-icon"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
            >
              <path
                d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
              />
            </svg>
          </i>
        </div>
      </div>
      <div
        class="leke-alert-container leke-alert-container-success leke-alert-has-title-container"
      >
        <div
          class="leke-alert-icon-box leke-alert-has-title-icon-box"
        >
          <i
            class="leke-icon"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
            >
              <path
                d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm193.5 301.7l-210.6 292a31.8 31.8 0 01-51.7 0L318.5 484.9c-3.8-5.3 0-12.7 6.5-12.7h46.9c10.2 0 19.9 4.9 25.9 13.3l71.2 98.8 157.2-218c6-8.3 15.6-13.3 25.9-13.3H699c6.5 0 10.3 7.4 6.5 12.7z"
              />
            </svg>
          </i>
        </div>
        <div
          class="leke-alert-context"
        >
          <div
            class="leke-alert-title"
          >
            恭喜！你所提交的信息已经审核通过，如有问题请联系客服。
          </div>
          <div
            class="leke-alert-message"
          >
            你好！欢迎使用金融云2.0专业版，你可以根据自身需求添加业务模块。你好！欢迎使用金融云2.0专业版，你可以根据自身需求添加业务模块。
          </div>
        </div>
        <div
          class="leke-alert-close-box leke-alert-has-title-close-box"
        >
          <i
            class="leke-icon"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
            >
              <path
                d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
              />
            </svg>
          </i>
        </div>
      </div>
      <div
        class="leke-alert-container leke-alert-container-error leke-alert-has-title-container"
      >
        <div
          class="leke-alert-icon-box leke-alert-has-title-icon-box"
        >
          <i
            class="leke-icon"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
            >
              <path
                d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
              />
            </svg>
          </i>
        </div>
        <div
          class="leke-alert-context"
        >
          <div
            class="leke-alert-title"
          >
            失败消息标题
          </div>
          <div
            class="leke-alert-message"
          >
            你好！欢迎使用金融云2.0专业版，你可以根据自身需求添加业务模块。你好！欢迎使用金融云2.0专业版，你可以根据自身需求添加业务模块。
          </div>
        </div>
        <div
          class="leke-alert-close-box leke-alert-has-title-close-box"
        >
          <i
            class="leke-icon"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
            >
              <path
                d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
              />
            </svg>
          </i>
        </div>
      </div>
      <div
        class="leke-alert-container leke-alert-container-warning leke-alert-has-title-container"
      >
        <div
          class="leke-alert-icon-box leke-alert-has-title-icon-box"
        >
          <i
            class="leke-icon"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
            >
              <path
                d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
              />
            </svg>
          </i>
        </div>
        <div
          class="leke-alert-context"
        >
          <div
            class="leke-alert-title"
          >
            警告消息标题
          </div>
          <div
            class="leke-alert-message"
          >
            你好！欢迎使用金融云2.0专业版，你可以根据自身需求添加业务模块。你好！欢迎使用金融云2.0专业版，你可以根据自身需求添加业务模块。
          </div>
        </div>
        <div
          class="leke-alert-close-box leke-alert-has-title-close-box"
        >
          <i
            class="leke-icon"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
            >
              <path
                d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
              />
            </svg>
          </i>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test example5.md 1`] = `
<div>
  <div>
    <div
      class="leke-alert-container leke-alert-container-info"
      style="border-radius: 0;"
    >
      <div
        class="leke-alert-icon-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm32 664c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V456c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272zm-32-344a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
            />
          </svg>
        </i>
      </div>
      <div
        class="leke-alert-context"
      >
        <div
          class="leke-alert-message"
        >
          这是一条警告消息，你好！欢迎使用金融云2.0专业版，你可以根据自身需求添加业务模块。你好！欢迎使用金融云2.0专业版，你可以根据自身需求添加业务模块。
        </div>
      </div>
      <div
        class="leke-alert-close-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
            />
          </svg>
        </i>
      </div>
    </div>
    <div
      class="leke-alert-container leke-alert-container-success"
      style="border-radius: 0;"
    >
      <div
        class="leke-alert-icon-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm193.5 301.7l-210.6 292a31.8 31.8 0 01-51.7 0L318.5 484.9c-3.8-5.3 0-12.7 6.5-12.7h46.9c10.2 0 19.9 4.9 25.9 13.3l71.2 98.8 157.2-218c6-8.3 15.6-13.3 25.9-13.3H699c6.5 0 10.3 7.4 6.5 12.7z"
            />
          </svg>
        </i>
      </div>
      <div
        class="leke-alert-context"
      >
        <div
          class="leke-alert-message"
        >
          这是一条警告消息，你好！欢迎使用金融云2.0专业版，你可以根据自身需求添加业务模块。你好！欢迎使用金融云2.0专业版，你可以根据自身需求添加业务模块。
        </div>
      </div>
      <div
        class="leke-alert-close-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
            />
          </svg>
        </i>
      </div>
    </div>
    <div
      class="leke-alert-container leke-alert-container-error"
      style="border-radius: 0;"
    >
      <div
        class="leke-alert-icon-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
            />
          </svg>
        </i>
      </div>
      <div
        class="leke-alert-context"
      >
        <div
          class="leke-alert-message"
        >
          这是一条警告消息，你好！欢迎使用金融云2.0专业版，你可以根据自身需求添加业务模块。你好！欢迎使用金融云2.0专业版，你可以根据自身需求添加业务模块。
        </div>
      </div>
      <div
        class="leke-alert-close-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
            />
          </svg>
        </i>
      </div>
    </div>
    <div
      class="leke-alert-container leke-alert-container-warning"
      style="border-radius: 0;"
    >
      <div
        class="leke-alert-icon-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
            />
          </svg>
        </i>
      </div>
      <div
        class="leke-alert-context"
      >
        <div
          class="leke-alert-message"
        >
          这是一条警告消息，你好！欢迎使用金融云2.0专业版，你可以根据自身需求添加业务模块。你好！欢迎使用金融云2.0专业版，你可以根据自身需求添加业务模块。
        </div>
      </div>
      <div
        class="leke-alert-close-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
            />
          </svg>
        </i>
      </div>
    </div>
    <div
      class="leke-alert-container leke-alert-container-warning"
      style="border-radius: 0;"
    >
      <div
        class="leke-alert-context"
      >
        <div
          class="leke-alert-message"
        >
          这是一条警告消息，你好！欢迎使用金融云2.0专业版，你可以根据自身需求添加业务模块。你好！欢迎使用金融云2.0专业版，你可以根据自身需求添加业务模块。
        </div>
      </div>
      <div
        class="leke-alert-action-box"
      >
        <button
          class="leke-remove-padding leke-btn leke-btn-link leke-btn-small"
        >
          <span
            class="leke-btn-content"
          >
            查看详情
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
